# go-flag

./: LICENSE  README.md  justfile  pyproject.toml  setup.cfg
examples/: class.py  dataclass.py  simple.py
flag/: __init__.py  defer.py  flag.py  panic.py  pointer.py  ptr.py  strconv.py  time.py
flag/strconv/: __init__.py
go_ports/: defer.py  error.py  flag.py  fmt.py  panic.py  ptr.py  time.py
go_ports/flag/: __init__.py  exceptions.py
go_ports/internal/: strconv.py
tests/: conftest.py  test_flag.py
