[project]
name = "go-flag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "flake8",
  "flake8-black",
  "pytest",
  "black",
  "isort",
  "jupyter-console",
  "mkdocs",
  "mkdocs-bootstrap386",
  "mkdocstrings[python]",
  "twine",
  "validate-pyproject[all]",
]

[tool.isort]
profile = "appnexus"
known_application = "flag"

[tool.pyright]
include = ["flag", "tests"]

[tool.pytest]
addopts = "--verbose -s"
testpaths = [ "tests" ]

[tool.setuptools]
packages = [ "flag" ]
